--- a/src/server/app/static/css/home.css
+++ b/src/server/app/static/css/home.css
@@ -79,8 +79,10 @@ h4{
 }
 
 #time-label {
+  display: block;
   padding: 5px;
   font-size: 30px;
+  text-align: center;
 }
 
 #time-input {
@@ -131,5 +133,4 @@ h4{
   #input-box {
     flex-direction: column;
   }
-
 }
