Took out "TraffBot: "

--- a/src/server/app/templates/home.jinja2
+++ b/src/server/app/templates/home.jinja2
@@ -28,7 +28,7 @@
     </div>
   </nav>
   <div id="main-box">
-    <h2>TraffBot: The Car Crash Calculator</h2>
+    <h2>The Car Crash Calculator</h2>
     <div id="bottom-box">
       <div id="background-info">
         <h3>Did you just get into a car crash in California? <br>Want to know how long it'll take to clear up?</h3>
